--- a/Index.html
+++ b/Index.html
@@ -146,12 +146,22 @@
     </header>
     <main>
         <section class="poem">
-            <h2>The Silent Moon</h2>
+            <h2>A Singer's Dream</h2>
             <p>
-                Whispers dance upon the silver light,<br>
-                Secrets woven in the fabric of night.<br>
-                A lonely moon in a sky so vast,<br>
-                Holding stories of a forgotten past.
+                We all start somewhere they say.<br>
+                why not with dreams and aspirations im sure someday,<br>
+                a face will be put to your voice on display.<br>
+                But hard work and determination is the price to pay.<br>
+                <br>
+                'Can I?'<br>
+                she conveys.<br>
+                A singer's dream painted gray.<br>
+                we all start somewhere they say.<br>
+                <br>
+                Praises to her ambitions and courage,<br>
+                a face put to a voice on stage.<br>
+                as the adage,<br>
+                "we all start somewhere they say"<br>
             </p>
             <div class="actions">
                 <button class="like-btn" onclick="toggleLike(this)">♡</button>
